force-app/main/default/objects/Receipt__c/fields/Amount_in_Currency__c.field-meta.xml
<CustomField>
    <fullName>Amount_in_Currency__c</fullName>
    <label>Amount in Currency</label>
    <length>30</length>
    <type>Text</type>
</CustomField>