force-app/main/default/objects/Receipt__c/fields/Applied_Amount__c.field-meta.xml
<CustomField>
    <fullName>Applied_Amount__c</fullName>
    <label>Applied Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>