force-app/main/default/objects/Receipt__c/fields/Bank_Transaction_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Transaction_Number__c</fullName>
    <label>Bank Transaction #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>