force-app/main/default/objects/Receipt__c/fields/BT_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>BT_Bank_Account__c</fullName>
    <label>BT Bank Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>