force-app/main/default/objects/Receipt__c/fields/Cheque_Clearance_Status__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Clearance_Status__c</fullName>
    <label>Cheque Clearance Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cheque_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Deposited</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>Bounced</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>