force-app/main/default/objects/Receipt__c/fields/Cheque_Number__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Number__c</fullName>
    <label>Cheque #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>