force-app/main/default/objects/Receipt__c/fields/Cheque_Type__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Type__c</fullName>
    <label>Cheque Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PDC (Post-Dated Cheque)</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>