force-app/main/default/objects/Receipt__c/fields/Customer_Names__c.field-meta.xml
<CustomField>
    <fullName>Customer_Names__c</fullName>
    <formula>Expression_of_Interest__r.Buyer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>