force-app/main/default/objects/Receipt__c/fields/Customer_Unit__c.field-meta.xml
<CustomField>
    <fullName>Customer_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Unit</label>
    <referenceTo>Property_Unit__c</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>