force-app/main/default/objects/Receipt__c/fields/Exchange_Rate_Date__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate_Date__c</fullName>
    <label>Exchange Rate Date</label>
    <type>Date</type>
</CustomField>