force-app/main/default/objects/Receipt__c/fields/Expression_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Expression_of_Interest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expression of Interest</label>
    <referenceTo>Expression_of_Interest__c</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>