force-app/main/default/objects/Receipt__c/fields/Fund_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Fund_Transaction__c</fullName>
    <label>Fund Transaction #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>