force-app/main/default/objects/Receipt__c/fields/GL_Date__c.field-meta.xml
<CustomField>
    <fullName>GL_Date__c</fullName>
    <label>GL Date</label>
    <type>Date</type>
</CustomField>