force-app/main/default/objects/Receipt__c/fields/Is_Converted_to_Identified__c.field-meta.xml
<CustomField>
    <fullName>Is_Converted_to_Identified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Converted to Identified</label>
    <type>Checkbox</type>
</CustomField>