force-app/main/default/objects/Receipt__c/fields/Is_Refunded__c.field-meta.xml
<CustomField>
    <fullName>Is_Refunded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Refunded</label>
    <type>Checkbox</type>
</CustomField>