force-app/main/default/objects/Receipt__c/fields/OIC_PaaS_ID__c.field-meta.xml
<CustomField>
    <fullName>OIC_PaaS_ID__c</fullName>
    <label>OIC PaaS ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>