force-app/main/default/objects/Receipt__c/fields/Parent_Receipt_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Receipt_ID__c</fullName>
    <label>Parent Receipt ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>