force-app/main/default/objects/Receipt__c/fields/Receipt_Amount__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Amount__c</fullName>
    <formula>Exchange_Rate__c * VALUE(TRIM(RIGHT(Amount_in_Currency__c, LEN(Amount_in_Currency__c) - 4)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receipt Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>