force-app/main/default/objects/Receipt__c/fields/Receipt_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Cancellation_Reason__c</fullName>
    <label>Receipt Cancellation Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>