force-app/main/default/objects/Receipt__c/fields/Receipt_Category__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Category__c</fullName>
    <label>Receipt Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Installment</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Down Payment</fullName>
            </value>
            <value>
                <fullName>Service charges</fullName>
            </value>
            <value>
                <fullName>Admin Fees</fullName>
            </value>
            <value>
                <fullName>Oqood Fees</fullName>
            </value>
            <value>
                <fullName>Handover Charges</fullName>
            </value>
            <value>
                <fullName>little Deed Fees</fullName>
            </value>
            <value>
                <fullName>Pre tittle Deed Fees</fullName>
            </value>
            <value>
                <fullName>Token Money/Booking Fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>