force-app/main/default/objects/Receipt__c/fields/Receipt_Type__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Type__c</fullName>
    <label>Receipt Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Mode_of_Payment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cheque Receipt</fullName>
            </value>
            <value>
                <fullName>Misc Receipt</fullName>
            </value>
            <value>
                <fullName>Bank Transfer Receipt</fullName>
            </value>
            <value>
                <fullName>Online Receipt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>