force-app/main/default/objects/Receipt__c/fields/Reversal_Synced__c.field-meta.xml
<CustomField>
    <fullName>Reversal_Synced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reversal Synced</label>
    <type>Checkbox</type>
</CustomField>