force-app/main/default/objects/Receipt__c/fields/Sales_Booking__c.field-meta.xml
<CustomField>
    <fullName>Sales_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Booking</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>