force-app/main/default/objects/Receipt__c/fields/Sync_Reversal_to_Zoho__c.field-meta.xml
<CustomField>
    <fullName>Sync_Reversal_to_Zoho__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Reversal to Zoho</label>
    <type>Checkbox</type>
</CustomField>