force-app/main/default/objects/Receipt__c/fields/Trigger_Zoho_Sync__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Zoho_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Zoho Sync</label>
    <type>Checkbox</type>
</CustomField>