force-app/main/default/objects/Receipt__c/fields/Unidentified__c.field-meta.xml
<CustomField>
    <fullName>Unidentified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unidentified</label>
    <type>Checkbox</type>
</CustomField>