force-app/main/default/objects/Receipt__c/fields/Zoho_Clearance_Date__c.field-meta.xml
<CustomField>
    <fullName>Zoho_Clearance_Date__c</fullName>
    <label>Zoho Clearance Date</label>
    <type>Date</type>
</CustomField>