force-app/main/default/objects/Receipt__c/fields/Zoho_Clearance_Status__c.field-meta.xml
<CustomField>
    <fullName>Zoho_Clearance_Status__c</fullName>
    <label>Zoho Clearance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CLEARED</fullName>
            </value>
            <value>
                <fullName>CANCELLED</fullName>
            </value>
            <value>
                <fullName>OPEN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>