force-app/main/default/objects/Receipt__c/fields/Zoho_ID__c.field-meta.xml
<CustomField>
    <fullName>Zoho_ID__c</fullName>
    <label>Zoho ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>