force-app/main/default/objects/Receipt__c/fields/Zoho_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Zoho_Payment_Status__c</fullName>
    <label>Zoho Payment Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>