force-app/main/default/objects/Receipt__c/validationRules/Currency_on_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Currency_on_Approved</fullName>
    <active>true</active>
    <description>Currency can&apos;t be change when Approved Status = Approved</description>
    <errorConditionFormula>AND(
    ISCHANGED(Currency__c),
    ISPICKVAL(Approval_Status__c, &quot;Approved&quot;)
)</errorConditionFormula>
    <errorDisplayField>Currency__c</errorDisplayField>
    <errorMessage>Currency cannot be changed after the record is Approved.</errorMessage>
</ValidationRule>