force-app/main/default/objects/Receipt__c/validationRules/Exchange_Rate_Date_Not_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Exchange_Rate_Date_Not_Future</fullName>
    <active>true</active>
    <description>Stops users from entering a future date in the Exchange Rate Date field.</description>
    <errorConditionFormula>Exchange_Rate_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Exchange_Rate_Date__c</errorDisplayField>
    <errorMessage>Exchange Rate Date cannot be a future date.</errorMessage>
</ValidationRule>