force-app/main/default/objects/Receipt__c/validationRules/GL_Date_Not_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>GL_Date_Not_Future</fullName>
    <active>true</active>
    <description>Ensures the GL Date field does not allow future dates.</description>
    <errorConditionFormula>GL_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>GL_Date__c</errorDisplayField>
    <errorMessage>GL Date cannot be a future date. Please select a valid date.</errorMessage>
</ValidationRule>