force-app/main/default/objects/Receipt__c/validationRules/Receipt_Amount_should_not_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Receipt_Amount_should_not_be_null</fullName>
    <active>true</active>
    <description>Receipt Amount should not be null</description>
    <errorConditionFormula>OR(
    ISBLANK(Receipt_Amount__c),
    Receipt_Amount__c &lt;= 0
)</errorConditionFormula>
    <errorMessage>Receipt Amount must be a positive value and cannot be blank.</errorMessage>
</ValidationRule>