force-app/main/default/objects/Receipt__c/validationRules/Receipt_Date_Not_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Receipt_Date_Not_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Receipt_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Receipt_Date__c</errorDisplayField>
    <errorMessage>Receipt Date cannot be a future date.</errorMessage>
</ValidationRule>