force-app/main/default/objects/Receipt__c/validationRules/Receipt_If_Approval_Status_is_Rejected.validationRule-meta.xml
<ValidationRule>
    <fullName>Receipt_If_Approval_Status_is_Rejected</fullName>
    <active>true</active>
    <errorConditionFormula>AND( TEXT(PRIORVALUE( Approval_Status__c )) = &quot;Rejected&quot;, 
TEXT( Approval_Status__c ) &lt;&gt; &quot;Rejected&quot; )</errorConditionFormula>
    <errorDisplayField>Approval_Status__c</errorDisplayField>
    <errorMessage>Status cannot be changed once it is set to Rejected.</errorMessage>
</ValidationRule>