force-app/main/default/objects/Receipt__c/validationRules/Receipt_If_Status_is_Open.validationRule-meta.xml
<ValidationRule>
    <fullName>Receipt_If_Status_is_Open</fullName>
    <active>true</active>
    <description>If Status is Open, no field can&apos;t be change</description>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    OR(
        TEXT(PRIORVALUE(Approval_Status__c)) = &quot;Open&quot;,
        TEXT(PRIORVALUE(Approval_Status__c)) = &quot;Applied&quot;
    ),
    $User.Username &lt;&gt; &quot;noumanahmed159@gmail.com.kcdev&quot;
)</errorConditionFormula>
    <errorMessage>This record is approved and cannot be modified.</errorMessage>
</ValidationRule>