force-app/main/default/objects/Receipt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Unit__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Service_Request__c</columns>
    <columns>Applied_Amount__c</columns>
    <columns>Expression_of_Interest__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>